[tool.poetry]
name = "repl_python3_PRZ-Stats-Bot"
version = "0.1.0"
description = ""
authors = ["przcaden <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
tweepy = "^4.1.0"
yfinance = "^0.1.63"
alpha-vantage = "^2.3.1"
pandas = "^1.3.3"
python-dotenv = "^0.19.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
